[tool.poetry]
name = "ckan-101"
version = "0.1.0"
description = "A crash course about CKAN."
authors = ["Alessio Cimarelli <alessio@dataninja.it>"]
license = "CC-BY"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.13.1"
ghp-import = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# build = jupyter-book build src --builder linkcheck
# publish = ghp-import -n -p -f src/_build/html
