[tool.poetry]
name = "lab-flask"
version = "0.1.0"
description = ""
authors = ["Alessio Cimarelli <jenkin@dataninja.it>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
Jinja2 = "^3.1.2"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.4"
GeoAlchemy = "^0.7.2"
GeoAlchemy2 = "^0.12.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
